# ChangeLog for dev-libs/libassuan
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libassuan/ChangeLog,v 1.46 2007/10/05 08:11:44 tgall Exp $

  05 Oct 2007; Tom Gall <tgall@gentoo.org> libassuan-1.0.2-r1.ebuild:
  stable on ppc64

  02 Oct 2007; Raúl Porcel <armin76@gentoo.org> libassuan-1.0.2-r1.ebuild:
  alpha/ia64 stable wrt #194113

  30 Sep 2007; Markus Meier <maekke@gentoo.org> libassuan-1.0.2-r1.ebuild:
  x86 stable, bug #194113

  29 Sep 2007; Lars Weiler <pylon@gentoo.org> libassuan-1.0.2-r1.ebuild:
  stable ppc, bug #194113

  29 Sep 2007; Jeroen Roovers <jer@gentoo.org> libassuan-1.0.2-r1.ebuild:
  Stable for HPPA (bug #194113).

  28 Sep 2007; Ferris McCormick <fmccor@gentoo.org>
  libassuan-1.0.2-r1.ebuild:
  Sparc stable --- Bug #194113 --- all tests pass.

*libassuan-1.0.2-r1 (20 Jul 2007)

  20 Jul 2007; Alon Bar-Lev <alonbl@gentoo.org> +libassuan-1.0.2-r1.ebuild:
  Make archive PIC

  06 Jul 2007; Alon Bar-Lev <alonbl@gentoo.org> libassuan-1.0.2.ebuild:
  ebuild cleanups

  06 Jul 2007; Alon Bar-Lev <alonbl@gentoo.org> libassuan-1.0.2.ebuild:
  License update

*libassuan-1.0.2 (06 Jul 2007)

  06 Jul 2007; Alon Bar-Lev <alonbl@gentoo.org> +libassuan-1.0.2.ebuild:
  Version bump

*libassuan-1.0.1 (02 Dec 2006)

  02 Dec 2006; Alon Bar-Lev <alonbl@gentoo.org> +libassuan-1.0.1.ebuild:
  Version bump

*libassuan-1.0.0 (01 Nov 2006)

  01 Nov 2006; Alon Bar-Lev <alonbl@gentoo.org> +libassuan-1.0.0.ebuild:
  Version bump

  30 Oct 2006; Alon Bar-Lev <alonbl@gentoo.org> ChangeLog:
  More dependencies fixes

*libassuan-0.9.3 (29 Oct 2006)

  29 Oct 2006; Alon Bar-Lev <alonbl@gentoo.org> +libassuan-0.9.3.ebuild:
  Version bump, closes bug#153159

*libassuan-0.9.2 (05 Oct 2006)

  05 Oct 2006; Robin H. Johnson <robbat2@gentoo.org>
  +libassuan-0.9.2.ebuild:
  Bump version ready for gnupg-1.9.22.

  01 Oct 2006; Fabian Groffen <grobian@gentoo.org> libassuan-0.6.10.ebuild:
  Marked ~ppc-macos
