@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libgcrypt
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgcrypt/ChangeLog,v 1.96 2007/10/05 08:17:44 tgall Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgcrypt/ChangeLog,v 1.97 2007/10/09 14:56:20 angelos Exp $
+
+  09 Oct 2007; Christoph Mende <angelos@gentoo.org> libgcrypt-1.2.4.ebuild:
+  Stable on amd64 wrt bug #194113
 
   05 Oct 2007; Tom Gall <tgall@gentoo.org> libgcrypt-1.2.4.ebuild:
   stable on ppc64
