@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/libassuan
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libassuan/ChangeLog,v 1.46 2007/10/05 08:11:44 tgall Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libassuan/ChangeLog,v 1.47 2007/10/09 14:55:15 angelos Exp $
+
+  09 Oct 2007; Christoph Mende <angelos@gentoo.org>
+  libassuan-1.0.2-r1.ebuild:
+  Stable on amd64 wrt bug #194113
 
   05 Oct 2007; Tom Gall <tgall@gentoo.org> libassuan-1.0.2-r1.ebuild:
   stable on ppc64
